<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of CodeOps Studio.
  ~ CodeOps Studio - Code anywhere anytime
  ~ https://github.com/euptron/CodeOps-Studio
  ~ Copyright (C) 2024-2025 Etido Peter
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see https://www.gnu.org/licenses/
  ~
  ~ If you have more questions, feel free to message Etido Peter if you have any
  ~ questions or need additional information. Email: etido.up@gmail.com
  -->

<resources>
    <string name="editor_expand_selection">Expand selection</string>
    <string name="editor_select_all">Select all</string>
    <string name="editor_copy_text">Copy text</string>
    <string name="editor_paste_text">Paste text</string>
    <string name="editor_format">Format</string>
    <string name="editor_long_select">Long select</string>
    <string name="editor_cut_text">Cut text</string>
    <string name="editor_selected">Selected</string>
    <string name="editor_completion_result_item_icon">completion result item icon</string>
    <string name="editor_no_search_match">No results</string>
    <string name="editor_unable_to_format">Unable to format sequence</string>
    <string name="editor_clip_text_length_too_large">Text is too large to copy</string>
    <string name="editor_conversion_failed">Conversion failed</string>
    <string name="editor_converting_to_title">Converting to %s</string>
    <string name="editor_upper_case">Upper case</string>
    <string name="editor_lower_case">Lower case</string>
    <string name="editor_select_convert_text_first">Please select the text to be converted first</string>
    <string name="editor_applying_changes">Applying changes…</string>
    <plurals name="editor_search_matches">
        <item quantity="one">Match</item>
        <item quantity="other">Matches</item>
    </plurals>
</resources>