<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of CodeOps Studio.
  ~ CodeOps Studio - Code anywhere anytime
  ~ https://github.com/euptron/CodeOps-Studio
  ~ Copyright (C) 2024-2025 Etido Peter
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see https://www.gnu.org/licenses/
  ~
  ~ If you have more questions, feel free to message Etido Peter if you have any
  ~ questions or need additional information. Email: euptron@gmail.com
  -->

<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/panel_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/contextual_magnifier_background"
    tools:theme="@style/Theme.Material3.DayNight">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/panel_btn_expand_selection"
            android:layout_width="@dimen/dimen48dp"
            android:layout_height="@dimen/dimen48dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/editor_expand_selection"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:src="@drawable/ic_expand_selection" />

        <ImageButton
            android:id="@+id/panel_btn_select_all"
            android:layout_width="@dimen/dimen48dp"
            android:layout_height="@dimen/dimen48dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/editor_select_all"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:src="@drawable/ic_select_all" />

        <ImageButton
            android:id="@+id/panel_btn_copy"
            android:layout_width="@dimen/dimen48dp"
            android:layout_height="@dimen/dimen48dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/editor_copy_text"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:src="@drawable/ic_copy_selection" />

        <ImageButton
            android:id="@+id/panel_btn_paste"
            android:layout_width="@dimen/dimen48dp"
            android:layout_height="@dimen/dimen48dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/editor_paste_text"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:src="@drawable/ic_paste_content" />

        <ImageButton
            android:id="@+id/panel_btn_long_select"
            android:layout_width="@dimen/dimen48dp"
            android:layout_height="@dimen/dimen48dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/editor_long_select"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:src="@drawable/ic_select_drag" />

        <ImageButton
            android:id="@+id/panel_btn_cut"
            android:layout_width="@dimen/dimen48dp"
            android:layout_height="@dimen/dimen48dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/editor_cut_text"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:src="@drawable/ic_cut_selection" />

        <ImageButton
            android:id="@+id/panel_btn_format"
            android:layout_width="@dimen/dimen48dp"
            android:layout_height="@dimen/dimen48dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/editor_format"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            android:src="@drawable/ic_format_selection"
            android:visibility="gone" />
    </LinearLayout>
</HorizontalScrollView>